<resources>
    <string name="app_name"></string>
    <string name="printer_title">打印</string>
    <string name="printer_type">打印机类型</string>
    <string name="printer_ip">固定IP打印机</string>
    <string name="printer_bluetooth">蓝牙打印机</string>
    <string name="printer_qr">二维码内容</string>
    <string name="printer_qr_hint">输入内容以生成特定二维码</string>
    <string name="printer_ip_hint">打印机IP</string>
    <string name="printer_port_hint">打印机端口</string>
    <string name="printer_port_text">9100</string>
    <string name="printer_type_80">80mm</string>
    <string name="printer_type_58">58mm</string>
    <string name="printer_image_width">图片宽度</string>
    <string name="printer_image_width_default">300</string>
    <string name="printer_image_height_parting">图片高度分段像素值</string>
    <string name="printer_test_ip">测试固定IP打印机</string>
    <string name="printer_test_bluetooth">测试蓝牙打印机</string>
    <string name="printer_cancel">取消</string>
    <string name="printer_determine">确定</string>
    <string name="printer_edit_toast_1">请填写打印机IP地址</string>
    <string name="printer_edit_toast_2">请正确填写打印机IP地址</string>
    <string name="printer_edit_toast_3">请填写打印机端口号</string>
    <string name="printer_edit_toast_4">请正确填写打印机端口号，0～65535</string>
    <string name="printer_bluetooth_not_support">不支持蓝牙</string>
    <string name="printer_bluetooth_dlg_open">打开蓝牙，以便连接蓝牙打印设备。</string>
    <string name="printer_bluetooth_dlg_close">是否需要关闭蓝牙？</string>
    <string name="printer_allow">"允许"</string>
    <string name="printer_deny">"拒绝"</string>
    <string name="printer_yes">"是"</string>
    <string name="printer_no">"否"</string>
    <string name="printer_bluetooth_dlg_close_error">由于某些原因导致应用关闭蓝牙失败，请到系统设置中自行关闭</string>
    <string name="printer_is_bonded">已配对设备:</string>
    <string name="printer_test_message_0">开始测试&#8230;</string>
    <string name="printer_test_message_1">生成测试页面数据&#8230;</string>
    <string name="printer_test_message_2">生成数据成功，开始创建Socket连接&#8230;</string>
    <string name="printer_test_message_3">创建Socket成功，开始发送测试数据&#8230;</string>
    <string name="printer_test_message_4">获取输出流成功，开始写入测试页面数据&#8230;</string>
    <string name="printer_test_message_5">写入测试页面数据成功，正在完成测试&#8230;</string>
    <string name="printer_result_message_1">测试成功完成！</string>
    <string name="printer_result_message_2">生成测试页面数据失败！</string>
    <string name="printer_result_message_3">创建Socket失败！</string>
    <string name="printer_result_message_4">获取输出流失败！</string>
    <string name="printer_result_message_5">写入测试页面数据失败！</string>
    <string name="printer_result_message_6">必要的参数不能为空！</string>
    <string name="printer_result_message_7">关闭Socket出错！</string>
    <string name="printer_result_message_8">打印失败！</string>
</resources>
