<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PrinterActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/printer_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/printer_title"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:text="@string/printer_type"
            android:textColor="#ff000000"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/printer_rg_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/printer_rb_80"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/printer_type_80" />

            <RadioButton
                android:id="@+id/printer_rb_58"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/printer_type_58" />

        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:text="@string/printer_image_width"
            android:textColor="#ff000000"
            android:textSize="18sp" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/printer_edt_width"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:inputType="number"
            android:text="@string/printer_image_width_default" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:text="@string/printer_image_height_parting"
            android:textColor="#ff000000"
            android:textSize="18sp" />

        <SeekBar
            android:id="@+id/printer_sb_height"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:max="254"
            android:progress="254" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:text="@string/printer_qr"
            android:textColor="#ff000000"
            android:textSize="18sp" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/printer_edt_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:hint="@string/printer_qr_hint"
            android:inputType="text" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/printer_btn_test_ip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/printer_test_ip" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/printer_btn_test_bluetooth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/printer_test_bluetooth" />

    </LinearLayout>

</LinearLayout>
